--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bep20-generator",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "The new Smart Contract Generator for BEP20 Token.",
   "files": [
     "contracts",
@@ -56,16 +56,16 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.10",
-    "chai": "^4.2.0",
-    "eslint": "^7.18.0",
+    "chai": "^4.3.0",
+    "eslint": "^7.20.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "ganache-cli": "^6.12.2",
-    "hardhat": "^2.0.8",
+    "hardhat": "^2.0.10",
     "lite-server": "^2.6.1",
     "sol2uml": "^1.1.25",
     "solhint": "^3.3.2",
@@ -75,6 +75,6 @@
     "truffle-flattener": "^1.5.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "3.3.0-solc-0.7"
+    "@openzeppelin/contracts": "^3.4.0-solc-0.7"
   }
 }
